buildscript {
    repositories {
        mavenCentral()
        gradlePluginPortal()
    }
    dependencies {
        classpath("com.gradleup.shadow:shadow-gradle-plugin:9.4.1")
    }
}

allprojects {
    group = 'com.meteordevelopments'
    version = '8.0'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'com.gradleup.shadow'
    apply plugin: 'maven-publish'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.release.set(21)
    }

    repositories {
        mavenCentral()
        mavenLocal()
        maven {
            name = 'spigot-repo'
            url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
        }

        maven {
            name = "papermc-repo"
            url = "https://repo.papermc.io/repository/maven-public/"
        }

        maven {
            name = 'bungeecord-repo'
            url = 'https://oss.sonatype.org/content/repositories/snapshots/'
        }

        maven {
            name = "sonatype"
            url = "https://oss.sonatype.org/content/groups/public/"
        }

        maven {
            name = 'mojang-repo'
            url = 'https://libraries.minecraft.net/'
        }

        maven {
            name = 'clip-repo'
            url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
        }

        maven {
            name = 'enginehub-repo'
            url = 'https://maven.enginehub.org/repo/'
        }

        maven {
            name = 'codemc-repo'
            url = 'https://repo.codemc.io/repository/maven-public/'
        }

        maven {
            name = 'essentialsx-repo'
            url = 'https://repo.essentialsx.net/releases/'
        }

        maven {
            name = 'arim-mvn-lgpl3'
            url = 'https://mvn-repo.arim.space/lesser-gpl3/'
        }

        maven {
            name = "combatlogx"
            url = "https://nexus.sirblobman.xyz/public/"
        }

        maven {
            name = "jitpack"
            url = "https://jitpack.io"
            content {
                excludeGroup "com.github.sirblobman.api"
                excludeGroup "com.github.sirblobman.combatlogx"
            }
        }

        maven {
            name = 'axPlugins'
            url = 'https://repo.artillex-studios.com/releases/'
        }

        maven {
            name = "tcoded-releases"
            url = "https://repo.tcoded.com/releases"
        }

        maven {
            name = 'opencollab-repo'
            url = 'https://repo.opencollab.dev/main/'
        }

        maven {
            name = 'dmulloy2-repo'
            url = "https://repo.dmulloy2.net/repository/public/"
        }

        flatDir {
            dirs "$rootDir/libs/"
        }
    }
}
